--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -7,7 +7,7 @@
       <div class="card-action">
         <%= link_to "edit", edit_post_path(post) %>
         <%= link_to "delete", post, method: :delete, data: { confirm: 'Are you sure?' } %>
-        <%= link_to "post to fb", post_to_fb_page_post_path(post) %>
+        <%= link_to "post to fb", publish_to_fb_post_path(post) %>
       </div>
     </div>
   </div>
