--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,11 +2,10 @@
   <div class="col s12 m8 offset-m2">
     <div class="card teal">
       <div class="card-content white-text">
-        <% unless post.publish_number.nil? %>
-          <div class="card-title">
-            <%= "\##{post.publish_number}" %>
-          </div>
-        <% end %>
+        <div class="card-title">
+          <%= "\##{post.publish_number}" if post.publish_number.present? %>
+          <%= "\##{post.tag_list.join(" ")} " %>
+        </div>
 
         <%= time_tag(post.created_at) %>
 
