--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,8 +1,8 @@
 <%= form_for post do |f| %>
   <div class="row">
     <div class="input-field col s12 m4 offset-m2">
-      <%= f.select(:tag_list, options_for_select(@tags), prompt: 'Select one tag') %>
-      <%= f.label :tag_list %>
+      <%= f.select(:category_list, options_for_select(@categories), prompt: 'Select a category') %>
+      <%= f.label :category_list %>
     </div>
   </div>
   <div class="row">
