--- a/app/views/admin/posts/_post.html.erb
+++ b/app/views/admin/posts/_post.html.erb
@@ -12,9 +12,9 @@
         <%= simple_format(post.content) %>
       </div>
       <div class="card-action">
-        <%= link_to "edit", edit_post_path(post) %>
-        <%= link_to "delete", post, method: :delete, data: { confirm: 'Are you sure?' } %>
-        <%= link_to "post to fb", publish_to_fb_post_path(post) %>
+        <%= link_to "edit", edit_admin_post_path(post) %>
+        <%= link_to "delete", admin_post_path(post), method: :delete, data: { confirm: 'Are you sure?' } %>
+        <%= link_to "post to fb", publish_to_fb_admin_post_path(post) %>
       </div>
     </div>
   </div>
