--- a/app/views/shared/_navbar_link.html.erb
+++ b/app/views/shared/_navbar_link.html.erb
@@ -1,3 +1,3 @@
-<li><%= link_to "Unpublished", posts_path %></li>
-<li><%= link_to "Published", published_posts_path %></li>
+<li><%= link_to "Unpublished", admin_posts_path %></li>
+<li><%= link_to "Published", admin_published_posts_path %></li>
 <li><%= link_to "Setting", admin_settings_edit_path %></li>
