--- a/app/views/admin/settings/edit.html.erb
+++ b/app/views/admin/settings/edit.html.erb
@@ -1,17 +1,26 @@
 <div class="row">
   <div class="col s12 m8 offset-m2">
     <%= form_for [:admin, @setting], method: :put do |f| %>
-      <div class="input-field">
+      <div class="row input-field">
         <%= f.text_field :page_name %>
         <%= f.label :page_name %>
       </div>
-      <div class="input-field">
+      <div class="row input-field">
         <%= f.number_field :start_number %>
         <%= f.label :start_number %>
       </div>
-      <div class="input-field">
+      <div class="row input-field">
         <%= f.text_field :categories, data: { role: 'materialtags' } %>
         <%= f.label :categories %>
+      </div>
+      <div class="row switch">
+        Auto Post:
+        <%= f.label :auto_post do %>
+        Off
+        <%= f.check_box :auto_post, {}, 'true', 'false' %>
+        <span class="lever"></span>
+        On
+        <% end %>
       </div>
       <%= f.submit "Update", class: "btn" %>
     <% end %>
