--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,13 @@
-<h1>Facebook Anonym Page</h1>
-<%= render 'form', post: @post %>
+<div class="row">
+  <div class="col s12 m10 offset-m1">
+    <div class="row center">
+      <i class="fa fa-comments-o logo"></i>
+    </div>
+    <div class="row center">
+      <div class="page-name">
+        <h1>FB Anonym Page</h1>
+      </div>
+    </div>
+    <%= render 'form', post: @post %>
+    </div>
+</div>
