--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<header>
+<header class="navbar-fixed">
   <nav>
     <div class="container nav-wrapper">
       <a href="/" class="brand-logo">FB Anonym Page</a>
