--- a/app/views/admin/settings/edit.html.erb
+++ b/app/views/admin/settings/edit.html.erb
@@ -1,28 +1,51 @@
 <div class="row">
   <div class="col s12 m8 offset-m2">
-    <%= form_for [:admin, @setting], method: :put do |f| %>
-      <div class="row input-field">
-        <%= f.text_field :page_name %>
-        <%= f.label :page_name %>
+    <div class="card-panel">
+      <div class="row">
+        <div class="col s12 setting-title">
+          <h2>Settings</h2>
+        </div>
       </div>
-      <div class="row input-field">
-        <%= f.number_field :start_number %>
-        <%= f.label :start_number %>
-      </div>
-      <div class="row input-field">
-        <%= f.text_field :categories, data: { role: 'materialtags' } %>
-        <%= f.label :categories %>
-      </div>
-      <div class="row switch">
-        Auto Post:
-        <%= f.label :auto_post do %>
-        Off
-        <%= f.check_box :auto_post, {}, 'true', 'false' %>
-        <span class="lever"></span>
-        On
-        <% end %>
-      </div>
-      <%= f.submit "Update", class: "btn" %>
-    <% end %>
+      <%= form_for [:admin, @setting], method: :put do |f| %>
+        <div class="row">
+          <div class="input-field col s12">
+          <%= f.text_field :page_name %>
+          <%= f.label :page_name %>
+          </div>
+        </div>
+
+        <div class="row input-field">
+          <div class="input-field col s12">
+            <%= f.number_field :start_number %>
+            <%= f.label :start_number %>
+          </div>
+        </div>
+
+        <div class="row input-field">
+          <div class="input-field col s12">
+            <%= f.text_field :categories, data: { role: 'materialtags' } %>
+            <%= f.label :categories %>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="switch col s12">
+            Auto Post
+            <%= f.label :auto_post do %>
+            Off
+            <%= f.check_box :auto_post, {}, 'true', 'false' %>
+            <span class="lever"></span>
+            On
+            <% end %>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col s12">
+            <%= f.submit "Update", class: "btn" %>
+          </div>
+        </div>
+      <% end %>
+    </div>
   </div>
 </div>
