--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col s12 m10 offset-m1">
     <div class="row center">
-      <i class="fa fa-comments-o logo"></i>
+      <i class="fa fa-user-secret logo"></i>
     </div>
     <div class="row center">
       <div class="page-name">
