--- a/app/views/shared/_navbar_link.html.erb
+++ b/app/views/shared/_navbar_link.html.erb
@@ -2,7 +2,7 @@
 <li><%= link_to "Published", admin_published_posts_path %></li>
 <li><%= link_to "Setting", admin_settings_edit_path, data: { no_turbolink: true } %></li>
 <li>
-  <%= link_to '#' do %>
+  <%= link_to edit_user_registration_path do %>
     <i class="fa fa-user"></i>
   <% end %>
 </li>
