Update flash message function

--- a/app/views/shared/_flash_toast.html.erb
+++ b/app/views/shared/_flash_toast.html.erb
@@ -1,6 +1,7 @@
-<% if flash[:toastr] %>
+<% [:toastr, :notice, :alert].each do |type| %>
+  <% next unless flash[type] %>
   <script type="text/javascript">
-    <% flash[:toastr].each do |msg| %>
+    <% Array(flash[type]).each do |msg| %>
       Materialize.toast("<%= msg %>", 4000);
     <% end %>
   </script>
