Move pagination to center

--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,3 +1,7 @@
-<%= will_paginate @posts, :params => { published: @published }, renderer: MaterializePagination::Rails %>
+<div class="center">
+  <%= will_paginate @posts, :params => { published: @published }, renderer: MaterializePagination::Rails %>
+</div>
 <%= render @posts %>
-<%= will_paginate @posts, :params => { published: @published }, renderer: MaterializePagination::Rails %>
+<div class="center">
+  <%= will_paginate @posts, :params => { published: @published }, renderer: MaterializePagination::Rails %>
+</div>
