--- a/app/views/admin/settings/edit.html.erb
+++ b/app/views/admin/settings/edit.html.erb
@@ -6,7 +6,22 @@
           <h2>Settings</h2>
         </div>
       </div>
-      <%= form_for [:admin, @setting], method: :put do |f| %>
+      <%= form_for [:admin, @setting], method: :patch do |f| %>
+        <div class="row">
+          <div class="col s12">
+            <% if @fb_pages.present? %>
+              <div class="input-field">
+                <%= f.select(:fb_page, options_for_select(@fb_pages)) %>
+                <%= f.label :fb_page %>
+              </div>
+            <% else %>
+              <%= f.label :fb_page %>
+              <%= @setting.fb_page ? @setting.fb_page : 'No page yet.' %>
+            <% end %>
+            <%= link_to 'Select Page', '/auth/facebook', class: 'btn' %>
+          </div>
+        </div>
+
         <div class="row">
           <div class="input-field col s12">
           <%= f.text_field :page_name %>
