--- a/app/views/shared/_navbar_link.html.erb
+++ b/app/views/shared/_navbar_link.html.erb
@@ -1,6 +1,6 @@
 <li><%= link_to "Unpublished", admin_posts_path %></li>
 <li><%= link_to "Published", admin_published_posts_path %></li>
-<li><%= link_to "Setting", admin_settings_edit_path, data: { no_turbolink: true } %></li>
+<li><%= link_to "Setting", admin_settings_edit_path %></li>
 <li>
   <%= link_to edit_user_registration_path do %>
     <i class="fa fa-user"></i>
