--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,7 +2,7 @@
   made by <a href="http://yennanlin.com">Yen-Nan Lin</a>
   |
   bug found?
-  <a href="#">
+  <a href="https://github.com/masolin/fb_anonym_page/issues">
     <i class="fa fa-github"></i>
   </a>
 </footer>
